--- a/package.json
+++ b/package.json
@@ -14,14 +14,20 @@
     "@expo/samples": "2.1.1",
     "axios": "^0.18.0",
     "create-react-native-app": "^2.0.2",
-    "expo": "^32.0.0",
+    "expo": "^34.0.0",
+    "expo-constants": "~6.0.0",
+    "expo-core": "^3.0.1",
+    "expo-file-system": "~6.0.0",
+    "expo-react-native-adapter": "^3.0.1",
     "expokit": "32.0.7",
     "native-base": "^2.11.0",
     "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
     "react-native-calendars": "^1.22.0",
     "react-native-fast-image": "^5.2.0",
+    "react-native-gesture-handler": "~1.3.0",
     "react-native-modal-datetime-picker": "^6.0.0",
+    "react-native-reanimated": "~1.1.0",
     "react-native-simple-modal": "^9.0.1",
     "react-native-status-bar-height": "^2.2.0",
     "react-navigation": "^3.0.9",
